--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" href="{{ url_for('static', filename='base.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
     <title>{% block title %}Home{% endblock %}</title>
 </head>
 <body>
@@ -22,7 +22,7 @@
     </nav>
     <div>
         {% block content %}
-            
+
         {% endblock %}
     </div>
 </body>
