--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -2,5 +2,19 @@
     {% block title %} Login {% endblock %}
 
     {% block content %}
-        <h1>This is the login page</h1>
+    <form action="" method="post">
+        <h3 align="center">Login</h3>
+        <div>
+            <label for="email">Email Address</label>
+            <input type="email" id="email" name="email" placeholder="Enter email">
+        </div>
+
+        <div>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Enter password">    
+        </div>
+
+        <br />
+        <button type="submit">Login</button>
+    </form>
     {% endblock %}
