--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -13,10 +13,13 @@
         </button>
         <div>
             <div>
-                <a href="/">Home</a>
-                <a href="/login">Login</a>
-                <a href="/sign-up">Sign Up</a>
-                <a href="/logout">Logout</a>
+                {% if user.is_authenticated %}
+                    <a href="/">Home</a>
+                    <a href="/logout">Logout</a>
+                {% else %}
+                    <a href="/login">Login</a>
+                    <a href="/sign-up">Sign Up</a>
+                {% endif %}
             </div>
         </div>
     </nav>
