--- a/website/static/base.css
+++ b/website/static/base.css
@@ -8,7 +8,7 @@
   /* Body styles */
   body {
     font-family: Arial, sans-serif;
-    background-color: aquamarine;
+    background-color: white;
   }
   
   /* Navigation styles */
