--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -1,53 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
-    <title>{% block title %}Home{% endblock %}</title>
-</head>
-<body>
-    <nav>
-        <button>
-            <span></span>
-        </button>
-        <div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
+        <title>{% block title %}Home{% endblock %}</title>
+    </head>
+    <body>
+        <nav>
+            <button>
+                <span></span>
+            </button>
             <div>
-                {% if user.is_authenticated %}
-                    <a href="/">Home</a>
-                    <a href="/logout">Logout</a>
-                {% else %}
-                    <a href="/login">Login</a>
-                    <a href="/sign-up">Sign Up</a>
-                {% endif %}
+                <div>
+                    {% if user.is_authenticated %}
+                        <a href="/">Home</a>
+                        <a href="/logout">Logout</a>
+                    {% else %}
+                        <a href="/login">Login</a>
+                        <a href="/sign-up">Sign Up</a>
+                    {% endif %}
+                </div>
             </div>
+        </nav>
+
+        {% with massages = get_flashed_messages(with_categories=true) %}
+            {% if massages %}
+                {% for category, massage in massages %}
+                    {% if category == "error" %}
+                        <div role="alert">
+                            {{ massage }}
+                            <button type="button" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% else %}
+                        <div role="alert">
+                            {{ massage }}
+                            <button type="button" data-dismiss="alert">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endif%}
+                {% endfor%}
+            {% endif %}
+        {% endwith %}
+
+        <div>
+            {% block content %}{% endblock %}
         </div>
-    </nav>
 
-    {% with massages = get_flashed_messages(with_categories=true) %}
-        {% if massages %}
-            {% for category, massage in massages %}
-                {% if category == "error" %}
-                    <div role="alert">
-                        {{ massage }}
-                        <button type="button" data-dismiss="alert">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% else %}
-                    <div role="alert">
-                        {{ massage }}
-                        <button type="button" data-dismiss="alert">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                {% endif%}
-            {% endfor%}
-        {% endif %}
-    {% endwith %}
+        <script type="text/javascript" src="{{ url_for('static', filename='index.js') }}"></script>
 
-    <div>
-        {% block content %}{% endblock %}
-    </div>
-</body>
+    </body>
 </html>
