--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,13 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='base.css') }}">
+        <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
         <title>{% block title %}Home{% endblock %}</title>
     </head>
     <body>
         <nav>
-            <button>
-                <span></span>
-            </button>
+            
             <div>
                 <div>
                     {% if user.is_authenticated %}
@@ -24,27 +23,22 @@
             </div>
         </nav>
 
-        {% with massages = get_flashed_messages(with_categories=true) %}
+            {% with massages = get_flashed_messages(with_categories=true) %}
             {% if massages %}
                 {% for category, massage in massages %}
                     {% if category == "error" %}
-                        <div role="alert">
+                        <div class="alert" role="alert">
                             {{ massage }}
-                            <button type="button" data-dismiss="alert">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
                         </div>
                     {% else %}
-                        <div role="alert">
+                        <div class="alert" role="alert">
                             {{ massage }}
-                            <button type="button" data-dismiss="alert">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
                         </div>
                     {% endif%}
                 {% endfor%}
             {% endif %}
-        {% endwith %}
+            {% endwith %}
+
 
         <div>
             {% block content %}{% endblock %}
