--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -15,7 +15,7 @@
         <form action="" method="POST">
             <textarea name="note" id="note"></textarea>
             <br />
-            <div align="center">
+            <div>
                 <button type="submit"><i class='bx bxs-edit'></i>  Add note</button>
             </div>
         </form>
